--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^5.2.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "playwright": "^1.44.0"
   }
